# cinova

./: .gitignore  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 14681e7064e4_add_genre_ids_to_library_item.py  4147d585d551_add_is_spoiler_to_comment.py  53a24e462ae7_cleanup_metadata_redundancy.py  5747cdd762bb_add_avatar_url_to_user.py  5df68122fd05_add_auth_best_practice_fields.py  867bc7efcf65_initial_supabase_migration.py  8db9a4988a8b_unify_library_items.py  9ba5bc895b4a_add_custom_list_tables.py  9e722716fb7c_add_is_complete_to_user.py  d88b778f8c32_add_person_details_to_follow.py
backend/src/app/: dependencies.py  main.py
backend/src/app/api/: api.py
backend/src/app/api/endpoints/: __init__.py  account.py  auth.py  certifications.py  comments.py  custom_lists.py  follows.py  library.py  metadata.py  movies.py  notifications.py  people.py  profiles.py  (+4 more)
backend/src/app/constants/: translations.json
backend/src/app/core/: config.py  constants.py  database.py  datetime_utils.py  security.py  support_context.md
backend/src/app/models/: __init__.py  base.py  comment.py  content.py  custom_list.py  follow.py  interaction.py  library_item.py  notification.py  person.py  user.py  watchlist.py
backend/src/app/services/: chatbot_service.py  library_service.py  metadata.py  movie_service.py  notification_manager.py  notification_service.py  recommendation_engine.py  series_service.py  tmdb_client.py
backend/src/app/utils/: content_converters.py  i18n_utils.py  image_utils.py  slug_utils.py
(+320 files in other folders)
