[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.37",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.42.0",
    "cryptography>=44.0.1",
    "requests>=2.33.1",
]
